--- a/example.html
+++ b/example.html
@@ -1,17 +1,15 @@
 <html>
-<head>
-<script
-    src="http://localhost:5006/time_plot/autoload.js?bokeh-autoload-element=ebc4c4f6-2a0d-47ae-a0be-1e799c852e24&bokeh-app-path=/time_plot&bokeh-absolute-url=http://localhost:5006/time_plot"
-    id="ebc4c4f6-2a0d-47ae-a0be-1e799c852e24"
-    data-bokeh-model-id=""
-    data-bokeh-doc-id="">
-</script>
-</head>
+
 <body>
 <h1>This is an embedding example</h1>
 <p>You can include the bokeh application inside an html page using the script embed referencing the location where the
 application is hosted.
-
+<script
+    src="https://fh-vis.herokuapp.com/scatter_animated/autoload.js?bokeh-autoload-element=8f9f64fc-89ed-4d31-ae32-1cfc9c051252&bokeh-app-path=/scatter_animated&bokeh-absolute-url=https://fh-vis.herokuapp.com/scatter_animated"
+    id="8f9f64fc-89ed-4d31-ae32-1cfc9c051252"
+    data-bokeh-model-id=""
+    data-bokeh-doc-id=""
+></script>
 </body>
 </html>
 
